# play-integrity-python

./: .python-version  README.md  pyproject.toml
.github/workflows/: ci.yml
play_integrity/: __init__.py  integrity.py
play_integrity_python/: play_integrity.py
tests/: test_play_integrity.py  test_play_integrity_python.py
