[tool.poetry]
name = "play-integrity-python"
version = "0.1.0"
description = "Python library to verify Play Integrity API"
authors = ["Yves Tumushimire <yvestumushimire@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.72.0"
google-auth = "^2.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.12.0", allow-prereleases = true}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
